arm: dts: colibri: add partition description on QSPI
Add QSPI partitions for testing recovery system on us02 SoM.
The partition layout on QSPI will be modified for colibri
board later.

Signed-off-by: Anatolij Gustschin <agust@denx.de>

--- a/arch/arm/boot/dts/socfpga_cyclone5_colibri.dts
+++ b/arch/arm/boot/dts/socfpga_cyclone5_colibri.dts
@@ -223,10 +223,29 @@
 			reg = <0x0 0x800000>;
 		};
 
-		partition@qspi-rootfs {
-			/* 24MB for jffs2 data. */
-			label = "Flash 0 jffs2 Filesystem";
-			reg = <0x800000 0x1800000>;
+		partition@qspi-u-boot {
+			label = "u-boot";
+			reg = <0x800000 0x100000>;
+		};
+
+		partition@qspi-env1 {
+			label = "env1";
+			reg = <0x900000 0x10000>;
+		};
+
+		partition@qspi-env2 {
+			label = "env2";
+			reg = <0x910000 0x10000>;
+		};
+
+		partition@qspi-recovery {
+			label = "recovery";
+			reg = <0x920000 0x800000>;
+		};
+
+		partition@qspi-data {
+			label = "data";
+			reg = <0x1120000 0xee0000>;
 		};
 	};
 };
