arm: dts: colibri: reserve space at the end of QSPI
Reserve space as indicated in the update concept document.

Signed-off-by: Anatolij Gustschin <agust@denx.de>

--- a/arch/arm/boot/dts/socfpga_cyclone5_colibri.dts
+++ b/arch/arm/boot/dts/socfpga_cyclone5_colibri.dts
@@ -245,7 +245,11 @@
 
 		partition@qspi-data {
 			label = "data";
-			reg = <0x1120000 0xee0000>;
+			reg = <0x1120000 0x6e0000>;
+		};
+		partition@qspi-reserved {
+			label = "reserved";
+			reg = <0x1800000 0x800000>;
 		};
 	};
 };
