--- a/arch/arm64/configs/beluga_defconfig
+++ b/arch/arm64/configs/beluga_defconfig
@@ -82,6 +82,9 @@ CONFIG_IP_NF_FILTER=y
 CONFIG_IP_NF_TARGET_REJECT=y
 CONFIG_IP_NF_MANGLE=y
 CONFIG_L2TP=y
+CONFIG_VLAN_8021Q=y
+# CONFIG_VLAN_8021Q_GVRP is not set
+# CONFIG_VLAN_8021Q_MVRP is not set
 CONFIG_NET_SCHED=y
 CONFIG_NET_SCH_CBS=y
 CONFIG_NET_SCH_ETF=y
@@ -219,7 +222,10 @@ CONFIG_R8169=y
 # CONFIG_NET_VENDOR_SOLARFLARE is not set
 # CONFIG_NET_VENDOR_SMSC is not set
 # CONFIG_NET_VENDOR_SOCIONEXT is not set
-# CONFIG_NET_VENDOR_STMICRO is not set
+CONFIG_NET_VENDOR_STMICRO=y
+CONFIG_STMMAC_ETH=y
+CONFIG_STMMAC_PLATFORM=y
+CONFIG_DWMAC_IMX8=y
 # CONFIG_NET_VENDOR_SUN is not set
 # CONFIG_NET_VENDOR_SYNOPSYS is not set
 # CONFIG_NET_VENDOR_TEHUTI is not set
@@ -436,6 +442,8 @@ CONFIG_MV_XOR_V2=y
 CONFIG_PL330_DMA=y
 CONFIG_QCOM_HIDMA_MGMT=y
 CONFIG_QCOM_HIDMA=y
+CONFIG_DMABUF_HEAPS=y
+CONFIG_DMABUF_HEAPS_CMA=y
 CONFIG_UIO=y
 CONFIG_VFIO=y
 CONFIG_VFIO_PCI=y
@@ -456,6 +464,7 @@ CONFIG_STAGING_MEDIA=y
 CONFIG_CLK_VEXPRESS_OSC=y
 CONFIG_COMMON_CLK_SCMI=y
 CONFIG_COMMON_CLK_SCPI=y
+CONFIG_COMMON_CLK_RS9_PCIE=y
 CONFIG_CLK_IMX8MP=y
 CONFIG_HWSPINLOCK=y
 CONFIG_ARM_MHU=y
@@ -560,3 +569,9 @@ CONFIG_DEBUG_FS=y
 # CONFIG_DEBUG_PREEMPT is not set
 # CONFIG_FTRACE is not set
 CONFIG_MEMTEST=y
+CONFIG_USB_F_FS=y
+CONFIG_USB_CONFIGFS_F_FS=y
+CONFIG_USB_ONBOARD_HUB=y
+CONFIG_GPIO_PCA953X=y
+CONFIG_RTC_DRV_HYM8563=y
+CONFIG_DP83822_PHY=y
